@startuml
abstract class Spotify {
+ reproducirPlaylist()
}
abstract class User {
+ reproducirPlaylist()
}
class Playlist {
- Canción: Canción
}
class Canción {
- título: String
- album: String
- artista: String
}
class UsuarioFree {
- nombreUsuario: String
- cancionesGustadas: List<String>
- Playlist: Playlist
+ meGusta()
+ crearPlaylist()
+ añadirAPlaylist()
}
class UsuarioPremium{
- cancionesDescargadas: List<String>
+ reproducirCancion()
+ descargarCancion()
}
Spotify --> "*" Canción
Spotify -l-> "*" Playlist
Playlist -u-> "*" Canción
UsuarioFree --> "*" Playlist
Spotify --> "*" UsuarioFree
User <|-- UsuarioPremium
UsuarioPremium --> "*" Canción
UsuarioPremium --> "*" Playlist
UsuarioFree --|> User

@enduml